--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "module": "esnext",
     "removeComments": false,
+    "allowJs": true,
     "typeRoots": [
       "src/ts/types",
       "node_modules/@types"
@@ -15,7 +16,12 @@
     "esModuleInterop": true
   },
   "include": [
-    "src/ts/client/App.ts",
-    "node_modules/redux-undo/typings.d.ts"
+    "src/ts/client/index.ts"
+  ],
+  "plugins": [
+    {
+      "name": "ts-lit-plugin",
+      "strict": true
+    }
   ]
 }
